# storeSpeedyPOC

./: .gitignore  Optimizations.txt  README.md  howToStartExpo.txt  info for other distributions.txt  new.txt  package-lock.json  run_app.sh  run_front.sh  store_map_editor withworkingdijkstras.py
Demo/: mazeMaker.py  paths.txt  run.bat  vmstoretext.txt  vmstoretext_readable.txt
Devmode/: run.bat  store_map_editor withworkingdijkstras.py  vmstoretext.txt  vmstoretext_readable.txt
Devmode/dijkstrasPythonCode/: vmstorepath.txt  vmstoretext.txt
Devmode/python_path_visualizer/: mazeMaker.py  paths.txt  run.bat
backEnd/: build.sh  c_cpp_properties.json  getAPIjson.cpp
backEnd/algorithemTestOne/demoTest/src/: NodeFactory.h  Path.h  StoreGraph.h  StoreGraphFactory.h  list.txt  list2.txt  list3.txt  list4.txt  main.cpp
backEnd/cppandGemini/: CMakeLists.txt  build.sh  getAPIjson.cpp  infoForCam.txt
backEnd/mazeTestOne/mazeTest/: mazeTest.sln  mazeTest.vcxproj  mazeTest.vcxproj.filters  testMaze.txt  vmstoretext_readable.txt
backEnd/mazeTestOne/mazeTest/src/: Edge.h  Maze.cpp  Maze.h  Node.h  NodeFactory.h  Path.h  StoreGraph.h  StoreGraphFactory.h  main.cpp
backEnd/mazeTestOne/src/: Maze.cpp  Maze.h  Node.h  main.cpp  testMaze.txt
backEnd/server/storage/locations/DefaultLoc/items/: 0000000000000.json  044000032028.json  5449000000439.json
backEnd/server/storage/locations/ValleyMillsWaco/aisles/: valleyMillsNeighbors.json
backEnd/server/storage/users/default/: Default_grocery_list.json  ValleyMills_grocery_list.json
backEnd/src/: CMakeLists.txt  StoreSpeedyJsonHandler.cpp  StoreSpeedyJsonHandler.h  aisle_data.json  build.sh  c_cpp_properties.json  config.h  infoForCam.txt  main.cpp
backEnd/src/aisles/: aisle.cpp  aisle.h
backEnd/src/api/: api_util.cpp  api_util.h
backEnd/src/cart/: cart.cpp  cart.h
backEnd/src/items/: build_and_run.sh  item.cpp  item.h  itemTesting  itemTesting.cpp
files/jsonExample/: exampleFromHackathon.txt
frontEnd/: App.js  README.md  app.json  config.js  index.js  package-lock.json  package.json
frontEnd/assets/: directory_structure.txt
frontEnd/assets/images/: directory_structure.txt
frontEnd/components/: AisleList.js  GroceryList.js  InputWithButton.js  directory_structure.txt
frontEnd/navigation/: MainTabNavigator.js  directory_structure.txt
frontEnd/screens/: HomeScreen.js  SettingsScreen.js
frontEnd/utils/: api.js  cookieManager.js
server/: CMakeLists.txt  main.cpp  serverInfo
server/storage/users/default/: Default_grocery_list.json  Valley%20Mills_grocery_list.json  Valley_Mills_grocery_list.json
